--- a/css/common.css
+++ b/css/common.css
@@ -102,6 +102,14 @@
 .prodListType3 .txt {margin:12px 0 0;}
 .prodListType3 .rank1 {position:absolute;top:20px;left:19px;width:250px;height:450px;margin:0;}
 .prodListType3 .rank1 .thumb {width:250px;height:450px;border:0;}
+
+.prodList .prodListType4 {margin:0;border-top:1px solid #e8e8e8;border-left:1px solid #e8e8e8;}
+.prodListType4 li {position:relative;width:25%;height:387px;margin:0;}
+.prodListType4 li:after {content:"";position:absolute;top:0;right:0;bottom:0;left:0;border-right:1px solid #e8e8e8;border-bottom:1px solid #e8e8e8;z-index:-1;}
+.prodListType4 .thumb {width:260px;height:280px;margin:0 auto;border-radius:0;text-align:center;}
+.prodListType4 .thumb img {max-width:100%;max-height:100%;}
+.prodListType4 .prodLabel {left:auto;top:17px;right:20px;}
+.prodListType4 .txt {margin:0;}
 /* //제품 리스트 */
 
 /* 타이틀 */
@@ -140,8 +148,16 @@
 .tabListType3 li a {display:block;height:45px;line-height:45px;margin:0 -1px;background:#fff;border:1px solid #dcdcdc;border-bottom:0;color:#484848;font-size:16px;text-align:center;}
 .tabListType3 .current a {position:relative;height:46px;line-height:46px;margin-bottom:-2px;border:2px solid #151515;border-bottom:0;font-size:18px;}
 
+.tabListType4 {border-top:2px solid #000;}
+.tabListType4 ul {zoom:1;margin:0 1px;}
+.tabListType4 ul:after {content:"";display:block;clear:both;}
+.tabListType4 li {float:left;}
+.tabListType4 li a {display:block;height:39px;line-height:39px;margin:0 -1px;background:#fff;border:1px solid #c8c8c8;border-top:0;border-bottom:1px solid #e1e1e1;color:#4a4a4a;font-size:15px;text-align:center;}
+.tabListType4 .current a {background:#bfc934;color:#fff;font-weight:400;}
 
 .tabItem4 li {width:25%;}
+.tabItem5 li {width:20%;}
+.tabItem8 li {width:12.5%;}
 /* //탭 메뉴 */
 
 /* 게시판 */
