--- a/css/default.css
+++ b/css/default.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 @import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);
-
+/*
 @font-face {
   font-family: 'Noto Sans KR';
   font-style: normal;
@@ -49,7 +49,7 @@
         url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Black.woff) format('woff'),
         url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Black.otf) format('opentype');
  }
-
+*/
 * {margin:0;padding:0;}
 body {color:#555;font:14px/1.4 Noto Sans KR, '돋움', dotum, sans-serif;font-weight:200;}
 a {color:#555;text-decoration:none;}
