--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,7 @@
 .mainCon section:first-child h2 {margin:0;}
 
 .bgSection {background:#f4f7f8;}
+.bgSection2 {background:#e8eaf2;}
 
 .mainCon .tabListType2 {float:right;margin:-20px 0 0;}
 .mainCon .prodList {margin:25px 0 0;}
