--- a/css/contents.css
+++ b/css/contents.css
@@ -3,14 +3,14 @@
 .brandTabCon .tabCon {display:none;}
 .brandTabCon > .on {display:block;}
 
-.brandHosp {width:100%;overflow:hidden;}
-.brandHosp ul {zoom:1;overflow:hidden;margin:-1px -1px 0 0;background:url(../images/contents/bg_tab_logo.gif) repeat;}
+.brandHosp {width:1050px;overflow:hidden;}
+.brandHosp ul {width:1052px;overflow:hidden;margin:-1px -1px 0 0;background:url(../images/contents/bg_tab_logo.gif) repeat;}
 .brandHosp li {float:left;width:16.66%;height:60px;background:url(../images/contents/bg_tab_logo_list.gif) no-repeat 100% 50%;text-align:center;}
 .brandHosp li:after {content:"";display:inline-block;height:60px;vertical-align:middle;}
 .brandHosp li img {vertical-align:middle;}
 
-.allBrand {width:100%;overflow:hidden;}
-.allBrand ul {zoom:1;overflow:hidden;margin:25px 0 0 -1px;background:url(../images/contents/bg_tab_brand.gif) repeat;}
+.allBrand {width:100%;overflow:hidden;padding:25px 0;}
+.allBrand ul {zoom:1;overflow:hidden;margin:0 0 0 -1px;background:url(../images/contents/bg_tab_brand.gif) repeat;}
 .allBrand li {float:left;width:12.5%;margin:3px 0;}
 .allBrand li a {display:block;padding:0 0 0 20px;color:#53534c;font-size:12px;}
 
