--- a/css/contents.css
+++ b/css/contents.css
@@ -237,10 +237,26 @@
 .orderComTxt span {display:inline-block;padding:70px 0 70px 90px;background:url(../images/contents/icon_order_com.gif) no-repeat 0 50%;}
 .orderComList {margin:10px 0 0 30px;font-size:12px;font-weight:100;}
  
-.loginWrap {width:680px;margin:50px auto 0;}
+.noMemOrderTxt {padding:12px 15px;border-top:1px solid #d5d5d5;}
+.noMemOrderComTxt {position:relative;margin:0 0 -1px;padding:12px 15px;background:#fff;border-top:1px solid #d5d5d5;border-bottom:1px dashed #787a7a;}
+
+.noMemOrderCom {zoom:1;margin:70px 0 0;}
+.noMemOrderCom:after {content:"";display:block;clear:both;}
+.noMemOrderCom section {float:right;width:512px;}
+.noMemOrderCom section:first-child {float:left;}
+
+.agreeSection {padding:25px;background:#f6f6f6;border-top:1px solid #e1e1e1;border-bottom:1px solid #e1e1e1;}
+.agreeSection > div {margin:15px 0 0;padding:20px 0 0;border-top:1px solid #e1e1e1;}
+.agreeSection > div:first-child {margin:0;padding:0;border:0;}
+.agreeSection > div h2 {font-size:14px;font-weight:500;}
+.agreeSection .agreeBox {overflow:auto;height:120px;margin:5px 0;padding:10px;background:#fff;border:1px solid #b9b9b9;font-size:11px;}
+.agreeSection label {font-size:11px;font-weight:100;}
+.agreeSection label .inputChk {vertical-align:middle;}
+
+.loginWrap {width:990px;margin:50px auto 0;}
 .loginWrap:after {content:"";display:block;clear:both;}
-.loginWrap > div {float:right;width:300px;}
-.loginWrap > div:first-child {float:left;}
+.loginWrap > div {float:left;width:300px;margin-left:45px;}
+.loginWrap > div:first-child {margin:0;}
 
 .loginWrap .inputTxt {width:248px;height:48px;padding:0 25px;background:#fefefe;border:1px solid #dbdbdb;font-size:14px;}
 .loginWrap fieldset p {margin:10px 0 0;}
@@ -252,6 +268,9 @@
 .loginLink .bar {display:inline-block;margin:0 20px;line-height:11px;border-left:1px solid #d6d6d6;text-indent:-9999px;}
 .loginWrap .btn a {margin:10px 0 0;}
 .loginWrap .tip {margin:12px 0 0;color:#7e7c7c;font-size:12px;font-weight:200;text-align:center;}
+
+.nonMem {margin:25px 0 0;}
+.nonMem .subTitle {margin-top:30px;}
 
 .joinWrap,
 .joinField {width:430px;margin:25px auto 0;}
