--- a/css/common.css
+++ b/css/common.css
@@ -146,8 +146,11 @@
 .subTitle2 {margin:0 0 15px;color:#1d1c1c;font-size:22px;font-weight:normal;line-height:1.1;}
 .subTitle2 span {margin:0 0 0 10px;color:#737373;font-size:14px;font-weight:100;}
 .subTitle3 {margin:0 0 10px 20px;color:#2f2f2f;font-size:18px;font-weight:500;}
+.subTitle4 {margin:0 0 15px;color:#1d1c1c;font-size:30px;font-weight:300;line-height:1.1;}
 .titOpt {float:right;margin-top:-30px;}
 .titBtn {float:right;margin-top:-45px;}
+.titBtn .datePick {display:inline-block;margin-left:15px;}
+.titBtn .datePick .inputTxt {width:90px;padding:6px 40px 6px 10px;background:url(../images/icon_cal.gif) no-repeat 95% 50%;border:1px solid #cbcbcb;}
 /* //타이틀 */
 
 /* 컨텐츠간 간격 */
@@ -202,9 +205,21 @@
 .bbsList thead th:before {content:"";float:left;width:1px;height:14px;margin:2px 0 0;background:#ccc;}
 .bbsList thead th:first-child:before {display:none;}
 .bbsList td {height:45px;border-bottom:1px solid #eee;text-align:center;}
+.bbsListType2 tbody td {border-left:1px solid #eee;}
+.bbsListType2 td:first-child {border-left:0;}
+
+.bbsListType3 thead th {border-left:1px solid #ddd;}
+.bbsListType3 thead th:before {display:none;}
+.bbsListType3 thead th:first-child {border-left:0;}
+.bbsListType3 td {height:auto;padding:20px 0;border-left:1px solid #ddd;}
+.bbsListType3 td:first-child {border-left:0;}
+.bbsList .thType1 thead th {font-size:20px;}
+.bbsList .thType2 thead th {font-size:18px;font-weight:100;}
+
 .bbsList .subject {padding:0 0 0 50px;text-align:left;}
 .bbsList .subject a {display:inline-block;max-width:90%;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;}
 .bbsList .subject a.on {font-weight:500;}
+.bbsList .adrs {padding:20px 50px;text-align:left;line-height:1.8;}
 .bbsList .answer {display:none;}
 .bbsList .answer td {height:auto;padding:35px 35px 35px 135px;background:#f5f5f5 url(../images/bg_faq_a.gif) no-repeat 100px 30px;text-align:left;}
 .bbsList .answer2 {display:none;}
@@ -228,6 +243,28 @@
 m.bbsList .prod .txt {color:#202020;font-size:15px;}
 .bbsList .prod .txt span {display:inline-block;width:49px;height:17px;margin:0 7px 0 0;border:1px solid #2d2d2d;border-radius:9px;font-size:12px;text-align:center;vertical-align:0;}
 .bbsList .prod .txt .buy {color:#ef0e7d;border:1px solid #fa065c;}
+
+.bbsList .orderDate {color:#302e2e;font-weight:500;}
+.bbsList .orderDate a {color:#878787;font-size:12px;font-weight:300;}
+.bbsList .prodImg:first-child {border-left:1px solid #eee;}
+.bbsList .prodImg {padding:24px 0 24px 25px;text-align:left;}
+.bbsList .prodImg2 {padding:14px 0 14px 50px;text-align:left;}
+.bbsList .prodImg img,
+.bbsList .prodImg2 img {width:67px;height:67px;border:1px solid #e0e0e0;}
+.bbsList .prodInfo {text-align:left;border-left:0;}
+.bbsList .prodInfo span {display:block;}
+.bbsList .prodInfo .num {color:#0e6b92;}
+.bbsList .prodInfo .name {color:#302e2e;}
+.bbsList .prodPrice {padding:0 0 0 25px;text-align:left;font-size:13px;line-height:2;}
+.bbsList .prodPrice .tit {margin:0 10px 0 0;}
+.bbsList .prodPrice .tit span {display:inline-block;margin:0 0 0 2px;vertical-align:1px;}
+.bbsList .prodPrice .money {color:#ed4e00;font-size:20px;}
+.bbsList .orderStatus .status {display:block;color:#302e2e;font-weight:400;}
+.bbsList .orderStatus .btnS {display:block;width:94px;margin:4px auto;padding:0;}
+.bbsList .orderStatus .reviewCom {display:block;margin:10px 0 0;font-size:11px;}
+.bbsList tfoot td {height:70px;padding:0 50px 0 0;background:#f5f4f4;border-top:1px solid #e5e4e4;color:#302e2e;text-align:right;}
+.bbsList tfoot td span {display:inline-block;padding:0 15px;}
+.bbsList tfoot td strong {font-size:24px;}
 
 .bbsView {border-top:1px solid #555;}
 .bbsView .viewHead {position:relative;background:#fcfcfc;border-bottom:1px solid #ddd;}
@@ -254,6 +291,8 @@ table .status span.com {background:#d39511;border:1px solid #d39511;color:#fff;}
 .bbsWrite th {padding:15px 0;color:#555;font-size:14px;vertical-align:top;}
 .bbsWrite td {height:26px;padding:10px 0;}
 .bbsWrite .inputTxt {padding:4px 5px;}
+.bbsWrite .adrs > span {display:block;margin:5px 0 0;}
+.bbsWrite .adrs > span:first-child {margin:0;}
 .bbsWrite select {height:30px;}
 .bbsWrite .point {display:inline-block;overflow:hidden;width:91px;height:15px;margin:0 60px 0 0;background:url(../images/icon_point.gif) no-repeat 0 -60px;text-indent:-9999px;vertical-align:-1px;}
 .bbsWrite .point1 {width:18px;}
@@ -326,6 +365,10 @@ table .status span.com {background:#d39511;border:1px solid #d39511;color:#fff;}
 .tableList .gift span:after {content:"";position:absolute;top:50%;right:-16px;border:16px solid transparent;border-left:16px solid #fff;border-right:0;}
 .tableList .gift img {float:right;}
 .tableList label {margin:0 10px 0 0;}
+.tableList .sale img {margin:0 5px 0 0;vertical-align:-4px;}
+.tableList .method {text-align:right;}
+.tableList .method span {float:left;}
+.tableList .reason .inputTxt {margin:10px 0 0;}
 
 table .alC {text-align:center;}
 table .alR {text-align:right;}
@@ -371,6 +414,7 @@ button.btnB3 {height:44px;line-height:1.2;}
 .btnType12 {background:#fff;border:1px solid #686f75;color:#323232;}
 .btnType13 {background:#fc8c13;border:1px solid #fc8c13;color:#fff;font-weight:500;}
 .btnType14 {background:#00c73c;border:1px solid #00c73c;color:#fff;font-weight:500;}
+.btnType15 {background:#0c80a6;border:1px solid #0c80a6;color:#fff;}
 
 .btnFacebook {background:#3a5a9a url(../images/btn_facebook.gif) no-repeat 16px 50%;border:1px solid #3a5a9a;color:#fff;font-size:16px;}
 .btnNaver {background:#1ec700 url(../images/btn_naver.gif) no-repeat 14px 50%;border:1px solid #1ec700;color:#fff;font-size:16px;}
@@ -382,3 +426,15 @@ button.btnB3 {height:44px;line-height:1.2;}
 .txtColor3 {color:#f73d04 !important;}
 .txtColor4 {color:#0886a5 !important;}
 /* //텍스트 컬러 */
+
+/* 레이어팝업 */
+.layerPop {position:fixed;top:50%;left:50%;background:#fff;border:1px solid #4a4a4a;}
+.layerTit {height:40px;padding:11px 0 0 28px;background:#343434;border-bottom:1px solid #dbdbdb;color:#fff;font-size:20px;font-weight:100;}
+.layerCon {padding:15px 30px 25px;}
+.layerCon .bbsWrite {border:0;}
+.layerCon .bbsWrite th,
+.layerCon .bbsWrite td {padding:5px;text-align:left;border:0;}
+.layerCon .bbsWrite .inputTxt {padding:5px;}
+.layerPop .btnWrap {margin:0;padding:25px 0;background:#f8f8f8;}
+.layerClose {position:absolute;top:15px;right:15px;overflow:hidden;width:23px;height:23px;background:url(../images/btn_layer_close.gif) no-repeat;text-indent:-9999px;}
+/* //레이어팝업 */
