--- a/css/contents.css
+++ b/css/contents.css
@@ -195,6 +195,9 @@
 .myTab .tab8:before {background-position:-420px 0;}
 .myTab .current .tab8:before {background-position:-420px -50px;}
 
+.orderNumber {margin:0 0 30px;padding:15px 0;background:#ebeff0;text-align:center;font-size:15px;}
+.orderNumber strong {font-size:24px;}
+
 .myCoupon {margin:0 0 30px;text-align:right;}
 .myCoupon p {float:left;font-size:11px;text-align:left;}
 .myCoupon .inputTxt {height:25px;font-size:12px;}
@@ -218,6 +221,8 @@
 .csTab .current .tab4:before {background-position:-150px -50px;}
 .csTab .tab5:before {background-position:-200px 0;}
 .csTab .current .tab5:before {background-position:-200px -50px;}
+
+.benefitTit {margin:50px 0 35px;color:#1d1c1c;font-size:42px;text-align:center;}
 
 .buyerInfo {height:49px;margin:45px 0 0;padding:0 30px;background:url(../images/contents/bg_buyer_info.gif) repeat-x;border:1px solid #b5b5b5;}
 .buyerInfo .subTitle2 {float:left;margin:12px 40px 0 0;}
